# Plex-File-Rename

./: .gitignore  README.md  plex_jellyfin_userdata.py  plex_rename.py  plex_rename_common.py  plex_undo_rename.py  pyproject.toml  test_plex_jellyfin_userdata.py  test_plex_rename.py
.github/workflows/: tests.yml
Plex-File-Rename v1/: plex_undo_rename.py
plexrename/: __init__.py  apply.py  artwork.py  cli.py  common.py  connect.py  jellyfin.py  models.py  naming.py  options.py  undo.py
tests/: test_plex_jellyfin_userdata.py  test_plex_rename.py
