[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "plex-file-rename"
dynamic = ["version"]
description = "Rename Plex media files to clean Title (Year) names for Jellyfin, with optional restructure and watched-state migration."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "William Fischer" }]
keywords = ["plex", "jellyfin", "rename", "media", "library"]
classifiers = [
    "Programming Language :: Python :: 3 :: Only",
    "License :: OSI Approved :: MIT License",
    "Environment :: Console",
    "Topic :: Multimedia :: Video",
]

# Phase 1 (export from Plex) needs plexapi. The apply/undo phases and the
# Jellyfin step-7 migration use only the standard library.
dependencies = ["plexapi>=4.15"]

[project.urls]
Homepage = "https://github.com/Mumbolio85/Plex-File-Rename"

[project.scripts]
plex-rename = "plexrename.cli:entrypoint"
plex-undo-rename = "plexrename.undo:entrypoint"

[tool.setuptools]
# The root plex_rename.py / plex_undo_rename.py files are thin launchers; the
# real code is the plexrename package.
packages = ["plexrename"]
py-modules = ["plex_rename", "plex_undo_rename"]

# Single source of truth for the version: plexrename.__version__.
[tool.setuptools.dynamic]
version = { attr = "plexrename.__version__" }
